# stierlitz

./: .gitignore  CMakeLists.txt  README.md  change_printf.py  encrypt_text.py  install_malware.sh  install_server.sh
Client/include/: clalsa_harvester.hpp  cldata_handler.hpp  client.hpp  client_macros.hpp  clkeylogger.hpp  clpacket_tunnel.hpp  clscreen_hunter.hpp  clspy_tunnel.hpp  clspytunnel.hpp  cltunnel_include.hpp  clwebcam_recorder.hpp  debug.hpp
Client/src/: clalsa_harvester.cpp  cldata_handler.cpp  client.cpp  clkeylogger.cpp  clpacket_tunnel.cpp  clscreen_hunter.cpp  clspy_tunnel.cpp  clspytunnel.cpp  clwebcam_recorder.cpp  main.cpp
Common/include/: common.hpp
DataHandler/: data_handler.cpp  data_handler.hpp
Server/include/: alsa_harvester.hpp  client_handler.hpp  command_handler.hpp  data_handler.hpp  event_logger.hpp  include_tunnel.hpp  keylogger.hpp  macros.hpp  packet_tunnel.hpp  scoped_epoll.hpp  screen_hunter.hpp  server.hpp  server_macros.hpp  spy_tunnel.hpp  webcam_recorder.hpp
Server/src/: alsa_harvester.cpp  client_handler.cpp  command_handler.cpp  data_handler.cpp  event_logger.cpp  keylogger.cpp  main.cpp  packet_tunnel.cpp  scoped_epoll.cpp  screen_hunter.cpp  server.cpp  spy_tunnel.cpp  webcam_recorder.cpp
URXVT/: alsa_harvester_terminal  alsa_harvester_terminal.cpp  c2_terminal.py  keylogger_terminal.cpp  keylogger_terminal.py  screen_hunter_terminal  screen_hunter_terminal.cpp  tunnel_terminal_include.hpp  urxvt_setup.sh  webcam_recorder_terminal  webcam_recorder_terminal.cpp
URXVT/profiles/: stierlitz_alsa_harvester  stierlitz_c2  stierlitz_keylogger  stierlitz_screen_hunter  stierlitz_wr
